--- a/.github/workflows/gitub.yml
+++ b/.github/workflows/gitub.yml
@@ -26,10 +26,11 @@ jobs:
         id: testing
         run: |
     
-          REVIEWERS_JSON="[{"type":"Team","id":13547},{"type":"Team","id":12639}]"
-  
-          echo "Reviewers List: $(echo "$REVIEWERS_JSON" | jq -c)"
-          echo "reviewers_json=$(echo "$REVIEWERS_JSON" | jq -c)" >> "$GITHUB_OUTPUT"
+          # REVIEWERS_JSON="[{"type":"Team","id":13547},{"type":"Team","id":12639}]"
+          # Reviewers List: [{"type":"Team","id":13547},{"type":"Team","id":12639}]
+
+          # echo "Reviewers List: $(echo "$REVIEWERS_JSON" | jq -c)"
+          echo "reviewers_json=[{"type":"Team","id":13547},{"type":"Team","id":12639}]" >> "$GITHUB_OUTPUT"
       - name: check
         env:
           ENV_CREATE: '["dit", "uat", "prod"]' 
