--- a/.github/workflows/gitub.yml
+++ b/.github/workflows/gitub.yml
@@ -25,20 +25,14 @@ jobs:
       - name: check github context
         id: testing
         run: |
-    
-         REVIEWERS_JSON=" [
-                            {
-                              "type": "Team",
-                              "id": 13547
-                            },
-                            {
-                              "type": "Team",
-                              "id": 12639
-                            }
-                          ]"
-          # Reviewers List: [{"type":"Team","id":13547},{"type":"Team","id":12639}]
-
-          # echo "Reviewers List: $(echo "$REVIEWERS_JSON" | jq -c)"
+         TEAM_IDS=("12345" "67890")
+         # Create the reviewers JSON array
+          REVIEWERS_JSON="[]"
+          for TEAM_ID in "${TEAM_IDS[@]}"; do
+            REVIEWERS_JSON=$(echo "$REVIEWERS_JSON" | jq --argjson team '{"type": "Team", "id": '$TEAM_ID'}' '. += [$team]')
+          done
+  
+          echo "Reviewers List: $(echo "$REVIEWERS_JSON" | jq -c)"
           echo "reviewers_json=$(echo "$REVIEWERS_JSON" | jq -c)" >> "$GITHUB_OUTPUT"
       - name: check
         env:
