--- a/.github/workflows/gitub.yml
+++ b/.github/workflows/gitub.yml
@@ -5,8 +5,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  test_job:
+  check-github-context:
     runs-on: ubuntu-latest
+    outputs:
+      reviewers_json: ${{ steps.testing.outputs.reviewers_json }}
     steps:
       - name: Print repository owner login
         run: |
@@ -29,16 +31,21 @@ jobs:
          # Create the reviewers JSON array
           REVIEWERS_JSON="[]"
           for TEAM_ID in "${TEAM_IDS[@]}"; do
-            REVIEWERS_JSON=$(echo "$REVIEWERS_JSON" | jq --argjson team '{"type": "Team", "id": '$TEAM_ID'}' '. += [$team]')
+            REVIEWERS_JSON=$(echo "$REVIEWERS_JSON" | jq --argjson team "{\"type\": \"Team\", \"id\": $TEAM_ID}" '. += [$team]')
           done
-  
+
           echo "Reviewers List: $(echo "$REVIEWERS_JSON" | jq -c)"
           echo "reviewers_json=$(echo "$REVIEWERS_JSON" | jq -c)" >> "$GITHUB_OUTPUT"
-      - name: check
-        env:
-          ENV_CREATE: '["dit", "uat", "prod"]' 
-        run: |        
-          REVIEWERS_JSON='${{ steps.testing.outputs.reviewers_json }}'
+
+  check:
+    runs-on: ubuntu-latest
+    needs: check-github-context
+    env:
+      ENV_CREATE: '["dit", "uat", "prod"]'
+    steps:
+      - name: Check environments
+        run: |
+          REVIEWERS_JSON='${{ needs.check-github-context.outputs.reviewers_json }}'
           echo "REVIEWERS_JSON = $REVIEWERS_JSON"
 
           ENV_ARRAY=$(echo $ENV_CREATE | jq -r '.[]')
@@ -49,8 +56,7 @@ jobs:
               is_branch_policy_required=false
             else
               is_branch_policy_required=true
-              request_body=$(jq -n --argjson reviewers ${{ needs.check-environments.outputs.reviewers_json }} \
-              '{"prevent_self_review":false,"reviewers":$reviewers,"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}')
+              request_body=$(jq -n --argjson reviewers "$REVIEWERS_JSON" \
+                '{"prevent_self_review":false,"reviewers":$reviewers,"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}')
             fi
           done
-
