--- a/.github/workflows/gitub.yml
+++ b/.github/workflows/gitub.yml
@@ -45,7 +45,7 @@ jobs:
     steps:
       - name: Check environments
         run: |
-          REVIEWERS_JSON='${{ needs.check-github-context.outputs.reviewers_json }}'
+          REVIEWERS_JSON=${{ needs.check-github-context.outputs.reviewers_json }}
           echo "REVIEWERS_JSON = $REVIEWERS_JSON"
 
           ENV_ARRAY=$(echo $ENV_CREATE | jq -r '.[]')
