--- a/.github/workflows/gitub.yml
+++ b/.github/workflows/gitub.yml
@@ -46,7 +46,8 @@ jobs:
           echo "Vault name: ${{ steps.org_prefix.outputs.runner_key_vault_name }}" 
           # echo "::add-mask::$GITHUB_TOKEN"
           GH_TOKEN=TEST
-          echo "TEST_TOKEN=$GITHUB_TOKEN" >> "$GITHUB_OUTPUT"
+          echo "TEST_TOKEN=$GH_TOKEN" >> "$GITHUB_OUTPUT"
+          # echo "TEST_TOKEN=$GH_TOKEN" >> "$GITHUB_ENV"
     
       - name: Get list of repositories in the organization
         id: get-repos
