--- a/.github/workflows/gitub.yml
+++ b/.github/workflows/gitub.yml
@@ -44,8 +44,8 @@ jobs:
         id: githubtoken
         run: |
           echo "Vault name: ${{ steps.org_prefix.outputs.runner_key_vault_name }}" 
-          # echo "::add-mask::$GITHUB_TOKEN"
           GH_TOKEN=TEST
+          echo "::add-mask::$GH_TOKEN"
           echo "TEST_TOKEN=$GH_TOKEN" >> "$GITHUB_OUTPUT"
           echo "TEST_TOKEN=$GH_TOKEN" >> "$GITHUB_ENV"
     
