--- a/.github/workflows/gitub.yml
+++ b/.github/workflows/gitub.yml
@@ -85,6 +85,7 @@ jobs:
   add-environments:
     needs: [check-environments, repo-list]
     runs-on: ubuntu-latest
+    if: ${{ fromJson(needs.check-environments.outputs.repos_without_environments) != '[]' }}
 
     steps:
         - name: github access token
