--- a/.github/workflows/gitub.yml
+++ b/.github/workflows/gitub.yml
@@ -88,4 +88,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: github access token
-        run: echo "${{ fromJson(needs.check-environments.outputs.repos_without_environments).length }}"
+        run: |
+          echo ${{ needs.check-environments.outputs.repos_without_environments }}
+          echo "${{ fromJson(needs.check-environments.outputs.repos_without_environments).length }}
