--- a/.github/workflows/gitub.yml
+++ b/.github/workflows/gitub.yml
@@ -7,6 +7,22 @@ env:
   TEAM_NAMES: '["devops-repo-admins", "devops"]'
 
 jobs:
+      - name: create a environment variable
+      run: |
+        dev_subscription_name="t12232"
+        uat_subscription_name="u12345"
+        prod_subscription_name="p67890"
+        
+        sub_variable_name="${ENV}_subscription_name"
+        SUBSCRIPTION_ID="${!sub_variable_name}"
+        
+        curl -L \
+        -X POST \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/Sakthi770/example-tomcat-war/environments/workflowenv/variables \
+        -d '{"name":"TRIALVAR","value":"$SUBSCRIPTION_ID"}'
   # check-github-context:
   #   runs-on: ubuntu-latest
   #   outputs:
@@ -26,69 +42,69 @@ jobs:
   #       env:
   #        GITHUB_CONTEXT: ${{ toJson(github) }}
 
-  repo-list:
-    runs-on: ubuntu-latest
-    outputs:
-        REPOS: ${{ steps.get-repos.outputs.repos }}
-        ORG_NAME: ${{ steps.org_prefix.outputs.ORG_NAME }}
-        TEST_TOKEN: ${{ steps.githubtoken.outputs.TEST_TOKEN }}
-    steps:
-      - name: Set org prefix & variables
-        id: org_prefix
-        shell: bash
-        run: |
-          echo "runner_key_vault_name=runnerkeyvaultname" >> "$GITHUB_OUTPUT"
-          echo "ORG_NAME=esxp-platform" >> "$GITHUB_OUTPUT"
+  # repo-list:
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #       REPOS: ${{ steps.get-repos.outputs.repos }}
+  #       ORG_NAME: ${{ steps.org_prefix.outputs.ORG_NAME }}
+  #       TEST_TOKEN: ${{ steps.githubtoken.outputs.TEST_TOKEN }}
+  #   steps:
+  #     - name: Set org prefix & variables
+  #       id: org_prefix
+  #       shell: bash
+  #       run: |
+  #         echo "runner_key_vault_name=runnerkeyvaultname" >> "$GITHUB_OUTPUT"
+  #         echo "ORG_NAME=esxp-platform" >> "$GITHUB_OUTPUT"
 
-      - name: github access token
-        id: githubtoken
-        run: |
-          echo "Vault name: ${{ steps.org_prefix.outputs.runner_key_vault_name }}" 
-          GH_TOKEN=TEST
-          echo "::add-mask::$GH_TOKEN"
-          echo "TEST_TOKEN=$GH_TOKEN" >> "$GITHUB_OUTPUT"
-          echo "TEST_TOKEN=$GH_TOKEN" >> "$GITHUB_ENV"
+  #     - name: github access token
+  #       id: githubtoken
+  #       run: |
+  #         echo "Vault name: ${{ steps.org_prefix.outputs.runner_key_vault_name }}" 
+  #         GH_TOKEN=TEST
+  #         echo "::add-mask::$GH_TOKEN"
+  #         echo "TEST_TOKEN=$GH_TOKEN" >> "$GITHUB_OUTPUT"
+  #         echo "TEST_TOKEN=$GH_TOKEN" >> "$GITHUB_ENV"
     
-      - name: Get list of repositories in the organization
-        id: get-repos
-        run: |
-            ORG_NAME=${{ steps.org_prefix.outputs.org_name }}
+  #     - name: Get list of repositories in the organization
+  #       id: get-repos
+  #       run: |
+  #           ORG_NAME=${{ steps.org_prefix.outputs.org_name }}
   
-            echo "REPOS=["environment-approval-demo","packer-build"]" >> "$GITHUB_OUTPUT"
-            #echo "repos=["environment-approval-demo","packer-build"]" >> "$GITHUB_OUTPUT"
-            echo "repos=$REPOS"
+  #           echo "REPOS=["environment-approval-demo","packer-build"]" >> "$GITHUB_OUTPUT"
+  #           #echo "repos=["environment-approval-demo","packer-build"]" >> "$GITHUB_OUTPUT"
+  #           echo "repos=$REPOS"
 
-  check-environments:
-    runs-on: ubuntu-latest
-    needs: repo-list
-    env:
-      ORG_NAME: ${{ needs.repo-list.outputs.ORG_NAME }}
-      TEST_TOKEN: ${{ needs.repo-list.outputs.TEST_TOKEN }}
-    outputs:
-      repos_without_environments: ${{ steps.filter-repos.outputs.repos_without_environments }}
-    steps:
-      - name: Get all repos
-        id: get-all-repos
-        run: |
-          echo "repos=${{ needs.repo-list.outputs.repos }}"
-          echo "repos=${{ needs.repo-list.outputs.repos }}" >> $GITHUB_OUTPUT
+  # check-environments:
+  #   runs-on: ubuntu-latest
+  #   needs: repo-list
+  #   env:
+  #     ORG_NAME: ${{ needs.repo-list.outputs.ORG_NAME }}
+  #     TEST_TOKEN: ${{ needs.repo-list.outputs.TEST_TOKEN }}
+  #   outputs:
+  #     repos_without_environments: ${{ steps.filter-repos.outputs.repos_without_environments }}
+  #   steps:
+  #     - name: Get all repos
+  #       id: get-all-repos
+  #       run: |
+  #         echo "repos=${{ needs.repo-list.outputs.repos }}"
+  #         echo "repos=${{ needs.repo-list.outputs.repos }}" >> $GITHUB_OUTPUT
  
-      - name: Check environments
-        id: filter-repos
-        run: |
-          REPO_LIST=${{ needs.repo-list.outputs.repos }}
-          echo $REPO_LIST
-          echo $ORG_NAME
-          echo $TEST_TOKEN
-          echo "repos_without_environments=[\"test\"]" >> $GITHUB_OUTPUT
-          echo "repos_without_environments=[\"test\"]" >> $GITHUB_ENV
+  #     - name: Check environments
+  #       id: filter-repos
+  #       run: |
+  #         REPO_LIST=${{ needs.repo-list.outputs.repos }}
+  #         echo $REPO_LIST
+  #         echo $ORG_NAME
+  #         echo $TEST_TOKEN
+  #         echo "repos_without_environments=[\"test\"]" >> $GITHUB_OUTPUT
+  #         echo "repos_without_environments=[\"test\"]" >> $GITHUB_ENV
 
-  add-environments:
-    needs: [check-environments, repo-list]
-    runs-on: ubuntu-latest
-    steps:
-      - name: github access token
-        run: |
-          echo "Repos without environments: ${{ needs.check-environments.outputs.repos_without_environments }}"
-          echo "Parsed JSON: $(echo '${{ needs.check-environments.outputs.repos_without_environments }}' | jq '.')"
-          echo "Length: $(echo '${{ needs.check-environments.outputs.repos_without_environments }}' | jq '. | length')"
+  # add-environments:
+  #   needs: [check-environments, repo-list]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: github access token
+  #       run: |
+  #         echo "Repos without environments: ${{ needs.check-environments.outputs.repos_without_environments }}"
+  #         echo "Parsed JSON: $(echo '${{ needs.check-environments.outputs.repos_without_environments }}' | jq '.')"
+  #         echo "Length: $(echo '${{ needs.check-environments.outputs.repos_without_environments }}' | jq '. | length')"
