--- a/.github/workflows/gitub.yml
+++ b/.github/workflows/gitub.yml
@@ -7,7 +7,11 @@ env:
   TEAM_NAMES: '["devops-repo-admins", "devops"]'
 
 jobs:
-      - name: create a environment variable
+ trail:
+  runs-on: ubuntu-latest
+  
+  steps:
+    - name: create a environment variable
       run: |
         dev_subscription_name="t12232"
         uat_subscription_name="u12345"
