--- a/.github/workflows/gitub.yml
+++ b/.github/workflows/gitub.yml
@@ -26,7 +26,7 @@ jobs:
         -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
         https://api.github.com/repos/Sakthi770/example-tomcat-war/environments/workflowenv/variables \
-        -d '{"name":"TRIALVAR","value":"$SUBSCRIPTION_ID"}'
+        -d '{"name":"TRIALVAR","value":"'"$SUBSCRIPTION_ID"'"}'
   # check-github-context:
   #   runs-on: ubuntu-latest
   #   outputs:
