--- a/.github/workflows/foldersample.yml
+++ b/.github/workflows/foldersample.yml
@@ -32,3 +32,51 @@ jobs:
         working-directory: images
         run: |
           ls
+      - name: Example Interactive Inputs Step
+        id: interactive-inputs
+        uses: boasihq/interactive-inputs@v2
+        with:
+          timeout: 160
+          title: "A batch of 10 feature flags have been added to be deployed. Would you like to proceed?"
+          interactive: |
+            fields:
+              - label: continue-roll-out
+                properties:
+                  display: Continue to roll out?
+                  defaultValue: 'false'
+                  type: boolean
+                  required: true
+              - label: exclude-domains
+                properties:
+                  description: Select the domains to exclude from the roll out
+                  display: Exclude domain(s)
+                  type: multiselect
+                  choices: 
+                    ["Payments", "Bookings", "Notifications", "Support"]
+              - label: requested-files
+                properties:
+                  display: Upload desired files
+                  type: multifile
+                  required: true
+                  description: Upload desired files that are to be uploaded to the runner for processing
+              - label: notes
+                properties:
+                  display: Additional note(s)
+                  type: textarea
+                  description: Additional notes on why this decision has been made are to be added to the audit trail.
+    
+      - name: Display Outputs
+        shell: bash
+        run: |
+          echo "Display Outputs"
+          echo -e "\n==============================\n"
+          echo "Detected Outputs: ${{join(steps.interactive-inputs.outputs.*, '\n')}}"
+          echo -e "\n==============================\n"
+    
+      - name: List the uploaded files in the directory
+        shell: bash
+        run: |
+          echo "Display uploaded files"
+          echo -e "\n==============================\n"
+          ls -la ${{ steps.interactive-inputs.outputs.requested-files }} # Use the label of the multifile/file field as the key to get the uploaded file directory
+          echo -e "\n==============================\n"
